[metadata]
name = Club
version = 1.0.0
author = Tristan S. Misja
author_email = TristanMisja09@gmail.com
maintainer = Tristan S. Misja
maintainer_email = TristanMisja09@gmail.com
description = Command Line Utility Belt
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/TristanMisja/Club
download_url = https://github.com/TristanMisja/Club
license = MIT
project_urls =
    Bug Tracker = https://github.com/TristanMisja/Club/issues
    Source Code = https://github.com/TristanMisja/Club
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Terminals
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System
    Operating System :: POSIX
    Operating System :: Unix
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Natural Language :: English

[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.0

[options.packages.find]
where = ./